--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@aws-sdk/client-ses": "^3.716.0",
     "@aws-sdk/credential-provider-node": "^3.716.0",
     "aws-sdk": "^2.1692.0",
+    "axios": "^1.7.9",
     "axois": "^0.0.1-security",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
