--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "csurf": "^1.10.0",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.0",
     "express-validator": "^6.15.0",
+    "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.7",
