--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "@aws-sdk/client-ses": "^3.716.0",
     "@aws-sdk/credential-provider-node": "^3.716.0",
     "aws-sdk": "^2.1692.0",
-    "axios": "^1.7.9",
+    "axios": "^1.8.1",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "csurf": "^1.10.0",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
