--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.5.0",
+    "multer": "^2.0.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.7",
     "nodemailer": "^6.9.16",
