--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@aws-sdk/client-ses": "^3.716.0",
     "@aws-sdk/credential-provider-node": "^3.716.0",
+    "@pdf-lib/fontkit": "^1.1.1",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.8.1",
     "bcrypt": "^5.1.1",
@@ -39,6 +40,7 @@
     "nodemon": "^3.0.3",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "pdf-lib": "^1.17.1",
     "uuid": "^9.0.1",
     "ws": "^8.18.0"
   }
