--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "pdf-lib": "^1.17.1",
+    "twilio": "^5.7.2",
     "uuid": "^9.0.1",
     "ws": "^8.18.0"
   }
